--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'G-RW6D62PS4Q');
   </script>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png+xml" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DeepFi Games</title>
 
