--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png+xml" href="/fav.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DeepFi Games</title>
+  <title>DeepRush</title>
 
 </head>
 
